# android-protectors

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/demo/android_protectors/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/demo/android_protectors/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/demo/android_protectors/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jnionload/: build.gradle.kts  readme.md
jnionload/src/androidTest/java/com/demo/jnionload/: ExampleInstrumentedTest.kt
jnionload/src/main/cpp/: CMakeLists.txt  jni_onload_tamper.c
jnionload/src/main/java/com/demo/jnionload/: JniOnLoadLibrary.kt
jnionload/src/test/java/com/demo/jnionload/: ExampleUnitTest.kt
